# robodogs

./: .gitignore  LICENSE  README.md  environment-portable.yml  environment.yml  pyproject.toml
Experiments/cartPole/: ProxyReward2.py  trainCartPoleRecurrent.py
Experiments/halfCheetah/: evaluateCheetah.py  trainCheetah.py
basicExperiments/cartPole/: ProxyReward.py  cartPoleAgent.py  cartPoleEnv.py  cleanRLSample.py  evaluateCartPole.py  trainCartPoleRecurrent.py  trainNonStaticRecurrent.py
basicExperiments/halfCheetah/: cheetahAgent.py  cheetahEnv.py  evaluateCheetah.py  trainCheetah.py  trainCheetahRecurrent.py  trainingLogic.py
cartPole/: cartPoleAgent.py  cartPoleEnv.py  evaluateCartPole.py  trainCartPole.py  trainCartPoleGRUNonRecurrent.py  trainCartPoleRecurrent.py
cartPole/basicExperiments/: cartPoleAgent.py  cartPoleOwn.py  evaluateCartPole.py  experimentPlayground.ipynb  trainCartPole.py  trainCartPoleGRUNonRecurrent.py  trainCartPoleRecurrent.py  trainNonStaticGRUNonRecurrrent.py  trainNonStaticRecurrent.py
checkpoints/: policy_100k.pt  policy_20k.pt  policy_final.pt
checkpoints/cheetah/: policy_20k.pt  policy_2k.pt  policy_300k.pt  policy_final.pt
checkpoints/quadruped/: policy_100k.pt  policy_2M_random.pt  policy_final.pt
configs/: metarl_default.json  metarl_default_cheetah.json
metarl/algorithms/: ppo_rnn.py
metarl/envs/: gait.py  (+2 more)
metarl_mujoco_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: eval_policy.py  eval_policy_cheetah.py  train_metarl.py  train_metarl_cheetah.py  train_metarl_quadruped.py
(+28 files in other folders)
